enum MainMenuAccessibilityIdentifiers {
    static let calculatorAction = "main_menu_calculator_action"
    static let settingsAction = "main_menu_settings_action"
    static let instructionsAction = "main_menu_instructions_action"
    static let feedbackAction = "main_menu_feedback_action"
}
